# GraphicsPlayground

./: .gitignore  README.md
Resources/Models/: placeholder-antenna-01.mtl
Resources/Shaders/: defaulFragment.frag  defaultFragment.frag  defaultVertex.vert  phong.frag  phong.vert
Scribbles/: TODO.txt  TOOLS.txt  scribbles.txt
code/: CMakeLists.txt  Editor.sln
code/Editor/: ApplicationParam.h  CMakeLists.txt  CameraController.cpp  CameraController.h  ControllerComponent.cpp  ControllerComponent.h  CustomMainWindow.cpp  CustomMainWindow.h  Editor.cpp  Editor.h  Editor.vcxproj  Editor.vcxproj.filters  IORedirect.cpp  IORedirect.h  KeyMapper.cpp  KeyMapper.h  MenuChoise.h  OpenGLWindow.cpp  OpenGLWindow.h  OpenGLWindow_moc.cpp  ShapeController.cpp  ShapeController.h  main.cpp  win32_Editor.cpp
code/Editor/Scenes/: Antennas.cpp  Antennas.h  Collision.cpp  Collision.h  Cubes.cpp  Cubes.hpp  SimpleGame.cpp  SimpleGame.h
code/Editor/Shapes/: Cube.cpp  Cube.h
code/Engine/: Assert.cpp  Assert.h  CMakeLists.txt  DllHelper.h  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EngineException.h
code/Engine/Assert/: AssertException.h
code/Engine/DebugTools/: DebugTools.h  Profile.h  Profiler.cpp  Profiler.h
code/Engine/Entities/: Component.h  Entity.cpp  Entity.h
code/Engine/Entities/Components/: Boundary.cpp  Boundary.h  BoundaryHandlerComponent.cpp  BoundaryHandlerComponent.h  Lerp.cpp  Lerp.h  LerpComponent.cpp  LerpComponent.h  Physics.cpp  Physics.h  PhysicsComponent.cpp  PhysicsComponent.h  Positional.cpp  Positional.h  RendererComponent.cpp  RendererComponent.h
code/Engine/Generator/: Cube.cpp  Cube.h  Shape.h  Sphere.cpp  Sphere.h
code/Engine/Input/: KeyInput.cpp  KeyInput.h  KeyMapperInterface.h
code/Engine/Math/: Constants.h  Mat2.cpp  Mat2.h  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Trigonometric.h  Vec2.h  Vec3.cpp  Vec3.h
code/Engine/Model/: Loader.cpp  Loader.h  ObjLoader.h
code/Engine/Render/: Camera.cpp  Camera.h  Color.h  RenderMode.h  Renderable.cpp  Renderable.h  WindowSize.h
code/Engine/Render/OpenGL/: OpenGLModel.cpp  OpenGLModel.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
code/Engine/Rendering/: Camera.cpp  Camera.h  Geometry.h  OpenGLModel.cpp  OpenGLModel.h  RenderTypes.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  WindowSize.h
code/Engine/Shapes/: Shape.h  Sphere.cpp  Sphere.h
code/Engine/Utilities/: ResourcePath.h  TypeTraits.h  stl_util.h
code/EngineTest/: CMakeLists.txt  EngineTest.vcxproj  EngineTest.vcxproj.filters  main.cpp
code/EngineTest/DebugToolsTest/: ProfilerTest.cpp
code/EngineTest/Math/: Mat2Test.cpp  Mat3Test.cpp  Mat4Test.cpp  MathTestHelper.h  Vec2Test.cpp  Vec3Test.cpp
code/Game/: Application.cpp  Application.h  Game.vcxproj  Game.vcxproj.filters  Input.cpp  Input.h
code/props/: OutputDir.props
